--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante2.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante2.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,29 +20,20 @@
 
     <ImageButton
         android:id="@id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_cadastro_estudante"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="CADASTRO DE ESTUDANTE"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_cadastro_estudante"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,16 +49,12 @@
 
     <TextView
         android:id="@+id/text_preencher_dados_login"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Agora preencha com os dados de login:"
+        android:text="@string/msg_instrucao_cadastro2"
         android:textAlignment="textStart"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,16 +62,12 @@
 
     <Button
         android:id="@+id/btn_proximo"
+        android:theme="@style/botaoLaranja"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Próximo"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:text="@string/action_proximo"
+        android:textColor="@color/branco_claro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,59 +75,41 @@
 
     <EditText
         android:id="@+id/plain_text_email_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  e-mail"
         android:inputType="textEmailAddress"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_preencher_dados_login" />
 
     <EditText
         android:id="@+id/plain_text_senha_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  senha"
         android:inputType="textPassword"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_email_input" />
 
     <EditText
         android:id="@+id/plain_text_senha_confirm_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  confirmar senha"
         android:inputType="textPassword"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
