--- a/lingoappTcc/app/src/main/res/drawable/ic_round_expand_less_24.xml
+++ b/lingoappTcc/app/src/main/res/drawable/ic_round_expand_less_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#A6A6A6"
+<vector android:height="24dp" android:tint="#F4F4F4"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M11.29,8.71L6.7,13.3c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.39 1.02,0.39 1.41,0L12,10.83l3.88,3.88c0.39,0.39 1.02,0.39 1.41,0 0.39,-0.39 0.39,-1.02 0,-1.41L12.7,8.71c-0.38,-0.39 -1.02,-0.39 -1.41,0z"/>
