--- a/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
@@ -29,15 +29,11 @@
 
             <TextView
                 android:id="@+id/text_meu_perfil_estudante"
+                android:theme="@style/tituloDaPagina"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="12dp"
-                android:fontFamily="@font/josefin_sans_semibold"
-                android:text="MEU PERFIL"
-                android:textAlignment="center"
-                android:textColor="@color/branco_claro"
+                android:text="@string/title_perfil"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -51,15 +47,29 @@
                 app:constraint_referenced_ids="frame_barra_superior,
         text_meu_perfil_estudante"></androidx.constraintlayout.widget.Group>
 
+            <ImageView
+                android:id="@+id/avatar_estudante"
+                android:contentDescription="@string/desc_avatar"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="50dp"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
+                app:srcCompat="@drawable/avatar_estudante" />
+
             <TextView
                 android:id="@+id/text_nome_estudante"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="76dp"
-                android:text="João Silva"
-                android:textColor="@color/black"
+                android:text="@string/msg_nome_estudante"
                 android:textSize="24sp"
-                android:textStyle="bold"
+                android:theme="@style/textoRoxoJosefin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/avatar_estudante"
                 app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
 
@@ -68,24 +78,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/arimo"
-                android:text="joaosilva@gmail.com"
-                android:textColor="@color/black"
-                android:textSize="16sp"
+                android:text="@string/msg_email_estudante"
+                android:textSize="20sp"
+                android:theme="@style/textoRoxoJosefin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/avatar_estudante"
                 app:layout_constraintTop_toBottomOf="@+id/text_nome_estudante" />
 
             <Button
                 android:id="@+id/btn_editar_dados"
+                android:theme="@style/botaoLaranja"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="@color/laranja1"
-                android:fontFamily="@font/lalezar"
-                android:text="Editar Dados"
+                android:text="@string/action_editar_dados"
+                android:textColor="@color/branco_claro"
                 app:icon="@android:drawable/ic_menu_edit"
+                app:iconSize="25dp"
+                app:iconTint="@color/branco_claro"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -93,15 +104,15 @@
 
             <Button
                 android:id="@+id/btn_historico_atividades"
+                android:theme="@style/botaoLaranja"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="@color/laranja1"
-                android:fontFamily="@font/lalezar"
-                android:text="Histórico de Atividades"
+                android:text="@string/action_historico_atividades"
+                android:textColor="@color/branco_claro"
                 app:icon="@android:drawable/ic_lock_idle_alarm"
+                app:iconSize="25dp"
+                app:iconTint="@color/branco_claro"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,15 +120,15 @@
 
             <Button
                 android:id="@+id/btn_conquistas"
+                android:theme="@style/botaoLaranja"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="@color/laranja1"
-                android:fontFamily="@font/lalezar"
-                android:text="Conquistas"
+                android:text="@string/action_conquistas"
+                android:textColor="@color/branco_claro"
                 app:icon="@android:drawable/btn_star_big_on"
+                app:iconSize="25dp"
+                app:iconTint="@color/branco_claro"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,30 +136,20 @@
 
             <Button
                 android:id="@+id/btn_sair"
+                android:theme="@style/botaoLaranja"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="@color/laranja1"
-                android:fontFamily="@font/lalezar"
-                android:text="Sair"
+                android:text="@string/action_sair"
+                android:textColor="@color/branco_claro"
                 app:icon="@android:drawable/ic_lock_power_off"
+                app:iconSize="25dp"
+                app:iconTint="@color/branco_claro"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_conquistas" />
 
-            <ImageView
-                android:id="@+id/avatar_estudante"
-                android:layout_width="173dp"
-                android:layout_height="145dp"
-                android:layout_marginTop="40dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
-                app:srcCompat="@drawable/avatar_estudante" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
