--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,29 +20,20 @@
 
     <ImageButton
         android:id="@id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/text_cadastro_estudante"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="CADASTRO DE ESTUDANTE"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_cadastro_estudante"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,18 +49,14 @@
 
     <TextView
         android:id="@+id/text_preencher_dados"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Preencha os seguintes campos com os seus dados:"
+        android:text="@string/msg_instrucao_cadastro1"
         android:textAlignment="textStart"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
 
@@ -77,14 +64,10 @@
         android:id="@+id/btn_proximo"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Próximo"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:text="@string/action_proximo"
+        android:textColor="@color/branco_claro"
+        android:theme="@style/botaoLaranja"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,21 +75,15 @@
 
     <EditText
         android:id="@+id/plain_text_nome_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  nome"
         android:inputType="textPersonName"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_preencher_dados" />
 
@@ -114,19 +91,13 @@
         android:id="@+id/plain_text_sobrenome_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  sobrenome"
         android:inputType="textPersonName"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_nome_input" />
 
@@ -134,17 +105,11 @@
         android:id="@+id/plain_text_matricula_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="  matrícula"
-        android:inputType="number"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:hint="  data de nascimento (DD/MM/AAAA)"
+        android:inputType="date"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
