--- a/lingoappTcc/app/src/main/res/layout/activity_login_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_login_professor.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,29 +20,20 @@
 
     <ImageButton
         android:id="@id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/text_login_professor"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="LOGIN DE PROFESSOR"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_login_professor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,92 +49,73 @@
 
     <EditText
         android:id="@+id/plain_text_email_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="12dp"
         android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="e-mail"
+        android:hint="   e-mail"
         android:inputType="textEmailAddress"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frame_barra_superior" />
 
     <EditText
         android:id="@+id/plain_text_senha_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
         android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="senha"
+        android:hint="   senha"
         android:inputType="textPassword"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_email_input" />
 
     <Button
         android:id="@+id/btn_entrar"
+        android:theme="@style/botaoLaranja"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
         android:text="Entrar"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:textColor="@color/branco_claro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />
 
-    <TextView
-        android:id="@+id/text_esqueceu_senha"
-        android:layout_width="231dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="@string/msg_esqueceu_senha"
-        android:textAlignment="viewStart"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />
-
-    <TextView
-        android:id="@+id/text_aqui"
-        android:layout_width="52dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="52dp"
-        android:clickable="true"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="@string/action_reenviar_email"
-        android:onClick="onClick"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/laranja1"
-        android:textSize="20sp"
+    <RelativeLayout
+        android:id="@+id/layout_esqueceu_senha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/text_esqueceu_senha"
-        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/btn_entrar">
 
+        <TextView
+            android:id="@+id/text_esqueceu_senha"
+            android:theme="@style/textoRoxoJosefin"
+            android:layout_width="231dp"
+            android:layout_height="28dp"
+            android:text="@string/msg_esqueceu_senha" />
+
+        <TextView
+            android:id="@+id/text_aqui"
+            android:theme="@style/textoLaranjaCAPS"
+            android:layout_width="55dp"
+            android:layout_height="27dp"
+            android:layout_toRightOf="@id/text_esqueceu_senha"
+            android:clickable="true"
+            android:text="@string/action_aqui"
+            android:onClick="onClick"
+            tools:ignore="OnClick" />
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
