--- a/lingoappTcc/app/src/main/res/layout/activity_pagina_cadastro.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_pagina_cadastro.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,29 +20,20 @@
 
     <ImageButton
         android:id="@+id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_pagina_cadastro"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="PÁGINA DE CADASTRO"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_pagina_cadastro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,20 +44,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="btn_voltar, frame_barra_superior,
-        text_pagina_cadastro" >
-    </androidx.constraintlayout.widget.Group>
+        text_pagina_cadastro"></androidx.constraintlayout.widget.Group>
 
     <Button
         android:id="@+id/btn_sou_estudante"
+        android:theme="@style/botaoBranco"
         android:layout_width="310dp"
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/branco_escuro"
-        android:fontFamily="@font/lalezar"
-        android:text="Sou Estudante"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/roxo"
+        android:text="@string/action_sou_estudante"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -75,15 +61,11 @@
 
     <Button
         android:id="@+id/btn_sou_professor"
+        android:theme="@style/botaoBranco"
         android:layout_width="310dp"
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/branco_escuro"
-        android:fontFamily="@font/lalezar"
-        android:text="Sou Professor"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/roxo"
+        android:text="@string/action_sou_professor"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -92,13 +74,11 @@
 
     <TextView
         android:id="@+id/text_tipo_de_conta"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Que tipo de conta você quer criar?"
-        android:textColor="@color/roxo"
-        android:textSize="19sp"
+        android:text="@string/msg_cadastro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
