--- a/lingoappTcc/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -18,17 +18,22 @@
         app:layout_constraintTop_toTopOf="parent">
     </FrameLayout>
 
+    <ImageButton
+        android:id="@+id/btn_voltar"
+        android:theme="@style/botaoVoltar"
+        android:layout_width="50dp"
+        android:layout_height="80dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/text_recuperar_senha"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="RECUPERAR SENHA"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_recuperar_senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,16 +49,11 @@
 
     <TextView
         android:id="@+id/text_instrucao1"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/lalezar"
         android:text="@string/msg_recuperar_senha1"
-        android:textAlignment="center"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,16 +61,11 @@
 
     <TextView
         android:id="@+id/text_instrucao2"
+        android:theme="@style/textoRoxoLalezar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/lalezar"
         android:text="@string/msg_recuperar_senha2"
-        android:textAlignment="center"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,14 +73,12 @@
 
     <Button
         android:id="@+id/btn_enviar"
+        android:theme="@style/botaoLaranja"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
         android:text="Enviar"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:textColor="@color/branco_claro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,19 +86,13 @@
 
     <EditText
         android:id="@+id/plain_text_email_input"
+        android:theme="@style/campoDeTexto"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="e-mail"
+        android:background="@drawable/fundo_botao"
+        android:hint="   e-mail"
         android:inputType="number"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
