--- a/lingoappTcc/app/src/main/res/values/themes.xml
+++ b/lingoappTcc/app/src/main/res/values/themes.xml
@@ -2,15 +2,132 @@
     <!-- Base application theme. -->
     <style name="Theme.Lingoapp1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/roxo</item>
+        <item name="colorPrimaryVariant">@color/branco_escuro</item>
+        <item name="colorOnPrimary">@color/roxo</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/laranja1</item>
+        <item name="colorSecondaryVariant">@color/laranja1</item>
+        <item name="colorOnSecondary">@color/branco_claro</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="botaoBranco">
+        <item name="android:backgroundTint">@color/branco_escuro</item>
+        <item name="android:textColor">@color/roxo</item>
+        <item name="android:radius">5dp</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="botaoRoxo">
+        <item name="android:backgroundTint">@color/roxo</item>
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:radius">5dp</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="botaoLaranja">
+        <item name="android:backgroundTint">@color/laranja1</item>
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:radius">5dp</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="campoDeTexto">
+        <item name="android:backgroundTint">@color/branco_escuro</item>
+        <item name="android:fontFamily">@font/arimo</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textColor">@color/cinza_escuro</item>
+        <item name="android:ems">10</item>
+    </style>
+
+    <style name="tituloDaPagina">
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:fontFamily">@font/josefin_sans_semibold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
+    <style name="tituloLogo">
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:text">@string/title_nome_lingoapp</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="textoRoxoLalezar">
+        <item name="android:textColor">@color/roxo</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textoRoxoJosefin">
+        <item name="android:textColor">@color/roxo</item>
+        <item name="android:fontFamily">@font/josefin_sans_semibold</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textoLaranjaCAPS">
+        <item name="android:textColor">@color/laranja1</item>
+        <item name="android:fontFamily">@font/josefin_sans_semibold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">viewEnd</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textoBrancoLalezar">
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:fontFamily">@font/lalezar</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textoBrancoJosefin">
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:fontFamily">@font/josefin_sans_semibold</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textoBrancoCAPS">
+        <item name="android:textColor">@color/branco_claro</item>
+        <item name="android:fontFamily">@font/josefin_sans_semibold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">viewEnd</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="botaoVoltar">
+        <item name="android:src">@drawable/ic_round_expand_less_24</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:rotation">270</item>
+        <item name="android:scaleX">2</item>
+        <item name="android:scaleY">2</item>
+        <item name="android:contentDescription">@string/desc_botao_voltar</item>
+    </style>
+
+    <style name="barraSuperiorVoltar">
+        <item name="android:background">@drawable/barra_superior_voltar</item>
+    </style>
+
+    <style name="barraSuperiorSemVoltar">
+        <item name="android:background">@drawable/barra_tabs</item>
+    </style>
+
 </resources>
